# cryptography-primitives

./: .clang-tidy  BUILD.md  CHANGELOG.md  CMakeLists.txt  CONST_TIME_EXECUTION_TESTING.md  CONTRIBUTING.md  DEPRECATION_NOTES.md  OVERVIEW.md  README.md  README_FIPS.md  THIRD-PARTY-PROGRAMS.txt
sources/ippcp/crypto_mb/src/: CMakeLists.txt
sources/ippcp/crypto_mb/src/cmake/linux/: Clang.cmake  GNU.cmake  Intel.cmake  IntelLLVM.cmake
sources/ippcp/crypto_mb/src/cmake/windows/: Intel.cmake  IntelLLVM.cmake  MSVC.cmake
sources/ippcp/crypto_mb/src/common/: cpu_features.c  crypto_mb_res.gen  ifma_cvt52.c  ifma_version.c
sources/ippcp/crypto_mb/src/ecnist/: ifma_arith_m256.c  ifma_arith_n256.c  ifma_arith_n384.c  ifma_arith_n521.c  ifma_arith_p256.c  ifma_arith_p384.c  ifma_arith_p521.c  ifma_ecdh_p256.c  ifma_ecdh_p384.c  ifma_ecdh_p521.c  ifma_ecdsa_p256.c  ifma_ecdsa_p384.c  ifma_ecdsa_p521.c  ifma_ecpoint_p256.c  ifma_ecpoint_p384.c  ifma_ecpoint_p521.c  ifma_ecpubkey_p256.c  ifma_ecpubkey_p384.c  ifma_ecpubkey_p521.c
sources/ippcp/crypto_mb/src/ecnist/internal_avx512/: internal_ecdsa_p256.c  internal_ecdsa_p384.c  internal_ecdsa_p521.c  internal_ecpubkey_p256.c  internal_ecpubkey_p384.c  internal_ecpubkey_p521.c  internal_ifma_ecdh_p256.c  internal_ifma_ecdh_p384.c  internal_ifma_ecdh_p521.c
sources/ippcp/crypto_mb/src/ed25519/: ifma_arith_ed25519.c  ifma_arith_n25519.c  ifma_arith_p25519.c  ifma_ed25519.c  sha512.c
sources/ippcp/crypto_mb/src/ed25519/internal_avx512/: internal_ed25519.c
sources/ippcp/crypto_mb/src/exp/: ifma_exp1k_mb.c  ifma_exp2k_mb.c  ifma_exp3k_mb.c  ifma_exp4k_mb.c  ifma_exp_mb.c  ifma_exp_method.c
sources/ippcp/crypto_mb/src/fips_cert/: common.c  selftest_mbx_ed25519_public_key_mb8.c  selftest_mbx_ed25519_sign_mb8.c  selftest_mbx_ed25519_verify_mb8.c  selftest_mbx_nistp256_ecdh_mb8.c  selftest_mbx_nistp256_ecdsa_sign_mb8.c  selftest_mbx_nistp256_ecdsa_sign_setup_complete_mb8.c  selftest_mbx_nistp256_ecdsa_verify_mb8.c  selftest_mbx_nistp256_ecpublic_key_mb8.c  selftest_mbx_nistp384_ecdh_mb8.c  selftest_mbx_nistp384_ecdsa_sign_mb8.c  selftest_mbx_nistp384_ecdsa_sign_setup_complete_mb8.c  selftest_mbx_nistp384_ecdsa_verify_mb8.c  selftest_mbx_nistp384_ecpublic_key_mb8.c  selftest_mbx_nistp521_ecdh_mb8.c  selftest_mbx_nistp521_ecdsa_sign_mb8.c  selftest_mbx_nistp521_ecdsa_sign_setup_complete_mb8.c  selftest_mbx_nistp521_ecdsa_verify_mb8.c  selftest_mbx_nistp521_ecpublic_key_mb8.c  selftest_mbx_rsa2k_private_crt_mb8.c  selftest_mbx_rsa2k_private_mb8.c  selftest_mbx_rsa2k_public_mb8.c  selftest_mbx_rsa3k_private_crt_mb8.c  selftest_mbx_rsa3k_private_mb8.c  selftest_mbx_rsa3k_public_mb8.c  selftest_mbx_rsa4k_private_crt_mb8.c  selftest_mbx_rsa4k_private_mb8.c  selftest_mbx_rsa4k_public_mb8.c
sources/ippcp/crypto_mb/src/rsa/: ifma_div_104_by_52.c  ifma_exp52x10_mb8.c  ifma_exp52x20_65537_mb8.c  ifma_exp52x20_mb8.c  ifma_exp52x30_mb8.c  ifma_exp52x40_65537_mb8.c  ifma_exp52x40_mb8.c  ifma_exp52x60_65537_mb8.c  ifma_exp52x60_mb8.c  ifma_exp52x79_65537_mb8.c  ifma_exp52x79_mb8.c  ifma_method.c  ifma_other52x_mb8.c  ifma_rsa_layer_mb8.c  ifma_rsa_mb8.c  ifma_rsa_ssl_prv2_layer_mb8.c  ifma_rsa_ssl_prv2_mb8.c  ifma_rsa_ssl_prv5_layer_mb8.c  ifma_rsa_ssl_prv5_mb8.c  ifma_rsa_ssl_pub65537_mb8.c  ifma_rsa_ssl_pub_layer_mb8.c
sources/ippcp/crypto_mb/src/rsa/internal_avx2/: AMS4x52x20_diagonal_stitched_with_extract_mb4.c  AMS4x52x30_diagonal_stitched_with_extract_mb4.c  AMS4x52x40_diagonal_stitched_with_extract_mb4.c  ifma_ahmm52x20_mb4.c  ifma_ahmm52x30_mb4.c  ifma_ahmm52x40_mb4.c  ifma_ahmr52x20_mb4.c  ifma_ahmr52x30_mb4.c  ifma_ahmr52x40_mb4.c  ifma_amm52x10_mb4.c  ifma_amm52x20_mb4.c  ifma_amm52x30_mb4.c  ifma_amm52x40_mb4.c  ifma_amm52x60_mb4.c  ifma_amm52x79_mb4.c  ifma_ams52x10_diagonal_mb4.c  ifma_ams52x20_diagonal_mb4.c  ifma_ams52x30_diagonal_mb4.c  ifma_ams52x40_diagonal_mb4.c  ifma_ams52x60_diagonal_mb4.c  ifma_ams52x79_diagonal_mb4.c
sources/ippcp/crypto_mb/src/rsa/internal_avx512/: AMS4x52x20_diagonal_stitched_with_extract_mb8.c  ifma_ahmm52x20_mb8.c  ifma_ahmr52x20_mb8.c  ifma_amm52x10_mb8.c  ifma_amm52x20_mb8.c  ifma_amm52x30_mb8.c  ifma_amm52x40_mb8.c  ifma_amm52x60_mb8.c  ifma_amm52x79_mb8.c  ifma_ams52x10_diagonal_mb8.c  ifma_ams52x20_diagonal_mb8.c  ifma_ams52x30_diagonal_mb8.c  ifma_ams52x40_diagonal_mb8.c  ifma_ams52x60_diagonal_mb8.c  ifma_ams52x79_diagonal_mb8.c  ifma_ams5x52x10_diagonal_mb8.c  ifma_ams5x52x20_diagonal_mb8.c  ifma_ams5x52x40_diagonal_mb8.c  ifma_extract_amm52x20_mb8.c
sources/ippcp/crypto_mb/src/sm2/: ifma_arith_nsm2.c  ifma_arith_psm2.c  ifma_ecdh_sm2.c  ifma_ecdsa_sm2.c  ifma_ecpoint_sm2.c  ifma_ecpubkey_sm2.c
sources/ippcp/crypto_mb/src/sm2/internal_avx512/: internal_ecdsa_sm2.c  internal_ifma_ecdh_sm2.c  internal_ifma_ecpubkey_sm2.c
sources/ippcp/crypto_mb/src/sm3/: sm3_avx512_mb16.c  sm3_avx512_mb8.c  sm3_final_mb16.c  sm3_final_mb8.c  sm3_init_mb16.c  sm3_init_mb8.c  sm3_messagedigest_mb16.c  sm3_messagedigest_mb8.c  sm3_update_mb16.c  sm3_update_mb8.c
sources/ippcp/crypto_mb/src/sm3/internal_avx512/: internal_sm3_final_mb16.c  internal_sm3_init_mb16.c  internal_sm3_messagedigest_mb16.c  internal_sm3_update_mb16.c
sources/ippcp/crypto_mb/src/sm4/: sm4_cbc_dec_mb16.c  sm4_cbc_enc_mb16.c  sm4_cfb_dec_mb16.c  sm4_cfb_enc_mb16.c  sm4_ctr_dec_mb16.c  sm4_ctr_enc_mb16.c  sm4_ctr_mb16.c  sm4_ecb_dec_mb16.c  sm4_ecb_enc_mb16.c  sm4_ofb_dec_mb16.c  sm4_ofb_enc_mb16.c  sm4_setkey_mb16.c  sm4_xts_dec_mb16.c  sm4_xts_enc_mb16.c
sources/ippcp/crypto_mb/src/sm4/ccm/: sm4_ccm_decrypt_mb16_api.c  sm4_ccm_encrypt_mb16_api.c  sm4_ccm_get_tag_mb16_api.c  sm4_ccm_init_mb16_api.c  sm4_ccm_update_aad_mb16_api.c
sources/ippcp/crypto_mb/src/sm4/gcm/: sm4_gcm_decrypt_mb16_api.c  sm4_gcm_encrypt_mb16_api.c  sm4_gcm_get_tag_mb16_api.c  sm4_gcm_init_mb16_api.c  sm4_gcm_update_aad_mb16_api.c  sm4_gcm_update_iv_mb16_api.c
sources/ippcp/crypto_mb/src/sm4/internal_avx512/: internal_sm4_setkey_mb16.c  sm4_cbc_mb16.c  sm4_cfb_mb16.c  sm4_ctr_mb16.c  sm4_ecb_mb16.c  (+2 more)
sources/ippcp/crypto_mb/src/x25519/: ifma_x25519.c
(+276 files in other folders)
